# Tell-of-Tales

./: pyproject.toml
Tales/: settings.py  urls.py
authentication/: admin.py  forms.py  models.py  views.py
authentication/migrations/: 0001_initial.py
home/: views.py
stories/: forms.py  models.py  views.py
stories/migrations/: 0001_initial.py
templates/: createbook.html  index.html  profile.html
