[tool.poetry]
name = "tell-of-tales"
version = "0.1.0"
description = "Website for Authors and artists"
authors = ["Yesenia Muniz"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.3"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
